added data pushing to db and started pushing data from db to client via livequeries
